[project]
name = "vacation_builder"
version = "0.1.0"
description = "vacation-builder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.2"
]

[project.scripts]
vacation_builder = "vacation_builder.main:run"
run_crew = "vacation_builder.main:run"
train = "vacation_builder.main:train"
replay = "vacation_builder.main:replay"
test = "vacation_builder.main:test"
run_with_trigger = "vacation_builder.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
